--- a/Aq.ExpressionJsonSerializer.Tests/Aq.ExpressionJsonSerializer.Tests.csproj
+++ b/Aq.ExpressionJsonSerializer.Tests/Aq.ExpressionJsonSerializer.Tests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="ExpressionJsonSerializerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StubBinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aq.ExpressionJsonSerializer\Aq.ExpressionJsonSerializer.csproj">
