--- a/Aq.ExpressionJsonSerializer/Aq.ExpressionJsonSerializer.csproj
+++ b/Aq.ExpressionJsonSerializer/Aq.ExpressionJsonSerializer.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Deserializer\Deserializer.UnaryExpression.cs" />
     <Compile Include="ExpressionJsonConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyNames.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="Serializer\Serialization.Binary.cs" />
     <Compile Include="Serializer\Serialization.Block.cs" />
