--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ build/
 [Bb]in/
 [Oo]bj/
 
+
+# Visual Studio 2015/2017 cache/options directory
+.vs/
+
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
 
