--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,4 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /.vs/Aq.ExpressionJsonSerializer/v16/Server/sqlite3
+/.vs/Aq.ExpressionJsonSerializer
